<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.t3421.calenderapp.AddEvent">

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_color"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerColor"
        app:layout_constraintTop_toBottomOf="@+id/comments_entered" />

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="116dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_entered" />

    <EditText
        android:id="@+id/event_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_event_name"
        android:inputType="text|textShortMessage"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_time"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:text="@string/select_start_time"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />

    <TextView
        android:id="@+id/start_time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_time"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/start_time"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/end_time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/end_time"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/end_time"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/end_time"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:text="@string/select_end_time"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/start_time" />

    <Button
        android:id="@+id/start_date"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_date"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/event_Name" />

    <TextView
        android:id="@+id/date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_date"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/start_date"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/comments_entered"
        android:layout_width="0dp"
        android:layout_height="102dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorControlHighlight"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/extra_info"
        android:inputType="textMultiLine"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_info" />

    <TextView
        android:id="@+id/extra_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_view_occurrence"
        tools:text="@string/extra_comments" />

    <Button
        android:id="@+id/event_view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginStart="59dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/color"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/ok_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/event_view_back"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintLeft_toRightOf="@+id/event_view_back"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/radioOccur"
        android:layout_width="233dp"
        android:layout_height="38dp"
        android:checkedButton="@+id/radioSingle"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/end_time"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent">


        <RadioButton
            android:id="@+id/radioSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_one_time" />

        <RadioButton
            android:id="@+id/radioWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_weekly" />

        <RadioButton
            android:id="@+id/radioMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_monthly" />

    </RadioGroup>

    <TextView
        android:id="@+id/event_view_occurrence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occurrence"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintRight_toLeftOf="@+id/radioOccur"
        android:layout_marginEnd="39dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/end_time_display"
        app:layout_constraintHorizontal_bias="0.347" />

</android.support.constraint.ConstraintLayout>
